[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlflow-toolkit"
version = "0.3.0"
description = "Symmetric log/load helpers for MLflow artifacts: dataframes, dicts, pickles and more."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Dubovik Pavel", email = "geometryk@gmail.com" }
]
dependencies = [
  "mlflow>=2.0",
  "PyYAML>=5.4",
  "pandas>=1.3",
  "pyarrow>=8.0",
]

[project.optional-dependencies]
extras = ["dill", "joblib"]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
  "dill",
  "joblib",
]

[project.urls]
Homepage = "https://github.com/dubovikmaster/mlflow-toolkit"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning:mlflow.*",
]
